Fix collapsing list items in side navigation
https://www.pivotaltracker.com/story/show/158886015

* Modify to use transform3d instead of animating width

[Finishes #158886015]

--- a/ui/src/css/sidemenu.css
+++ b/ui/src/css/sidemenu.css
@@ -1,7 +1,6 @@
 /* The side navigation menu */
 .sidenav {
   height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
@@ -9,7 +8,12 @@
   background-color: #45339D;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  transition: transform 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  width: 300px;
+}
+
+.sidenav.closed {
+  transform: translate3d(300px, 0, 0);
 }
 
 /* The navigation menu links */
